Added new refresh and settings icons and created folders for icons and popup.

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -8,8 +8,8 @@
 <body>
   <h1>
     Share via
-    <img src="" class="top-button" id="refresh" title="Refresh available services">
-    <img src="" class="top-button" id="options" title="Options">
+    <img src="/icons/settings.png" class="top-button" id="options" title="Options">
+    <img src="/icons/refresh.png" class="top-button" id="refresh" title="Refresh available services">
   </h1>
   <table id="button-table"></table>
 </body>
