Added code to popup to load ShareServices automatically.

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -4,6 +4,8 @@
   <title>Share</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script type="text/javascript" src="popup.js"></script>
+  <script type="text/javascript" src="/lib/constants.js"></script>
+  <script type="text/javascript" src="/lib/shareservice.js"></script>
 </head>
 <body>
   <h1>
