Renamed icons/setting.png to icons/options.png

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -10,7 +10,7 @@
 <body>
   <h1>
     Share via
-    <img src="/icons/settings.png" class="top-button" id="options" title="Options">
+    <img src="/icons/options.png" class="top-button" id="options" title="Options">
     <img src="/icons/refresh.png" class="top-button" id="refresh" title="Refresh available services">
   </h1>
   <table id="button-table"></table>
